[package]
name = "curve25519-dalek"
version = "1.1.4"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>",
           "Henry de Valence <hdevalence@hdevalence.ca>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/curve25519-dalek"
homepage = "https://dalek.rs/curve25519-dalek"
documentation = "https://docs.rs/curve25519-dalek"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "ristretto", "curve25519", "ECC"]
description = "A pure-Rust implementation of group operations on ristretto255 and Curve25519"
exclude = [
    "**/.gitignore",
    ".gitignore",
    ".travis.yml",
]

[dependencies]
packed_simd = { version = "0.3.0", features = ["into_bits"], optional = true }

[build-dependencies]
packed_simd = { version = "0.3.0", features = ["into_bits"], optional = true }

[features]
default = ["simd_backend"]

simd_backend = ["packed_simd"]
